# stepwise

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  adversarial-probe-output.json  homepage-spec.md  install.sh  new-user-test-output.json  pyproject.toml  run  synthesize-code-output.json  synthesize-docs-output.json  synthesize-ux-output.json
docs/: agent-integration.md  agent-session-continuity-proposal.md  api.md  boundary.md  cli.md  comparison.md  concepts.md  containment.md  executors.md  extensions.md  flow-reference.md  flow-sharing.md  flows-vs-skills.md  how-stepwise-is-different.md  how-to-comparison.md  how-to-generic-agents.md  how-to-plugins.md  how-to-skills.md  m3-llm-executor-plan.md  named-sessions-and-fork-plan.md  patterns.md  quickstart.md  troubleshooting.md  use-cases.md  web-ui.md  why-stepwise.md  writing-flows.md  yaml-format.md
examples/: generate-homepage.flow.yaml  report-test-failure.flow.yaml  report-test-linear.flow.yaml  report-test-loop.flow.yaml  report-test-parallel.flow.yaml  self_analysis.py
flows/: rapid-test.flow.yaml
plans/: welcome-flow.md
reports/: council-canvas-layout-design.md  council-plan-implement-core-job-staging-for-stepwise-o1-chunk.md  eval-1.0-run-1-20260320-2206.html  eval-1.0-run-1-20260321-0154.html  eval-1.0-run-2-20260326-1714.html  impl-plan-stepwise-add-a-comment-above-is-current-in-engine-py-currentness.md  impl-plan-stepwise-add-a-one-line-comment-above-is-current-in-engine-py-cur.md  impl-plan-stepwise-add-a-one-line-comment-above-the-is-current-method-in-engin.md  impl-plan-stepwise-add-a-stepwise-uninstall-command-that-cleanly-removes-stepwi.md  impl-plan-stepwise-agent-reliability-dx-polish-h14-h16-n1-n4-four-ite.md  impl-plan-stepwise-agent-reliability-h14-transient-error-retry-h16-par.md  impl-plan-stepwise-archive-delete-flows-add-first-class-archive-and-delete.md  impl-plan-stepwise-bug-after-resolved-deps-don-t-invalidate-across-loop-ite.md  impl-plan-stepwise-build-a-new-stepwise-flow-called-research-proposal-at-wo.md  impl-plan-stepwise-build-a-test-flow-that-validates-polling-executor-reliabilit.md  impl-plan-stepwise-build-the-stepwise-1-0-evaluation-flow-the-design-document.md  impl-plan-stepwise-dx-polish-n1-stepwise-new-template-n4-server-projec.md  impl-plan-stepwise-e1-job-metadata-event-foundation-add-structured-job-m.md  impl-plan-stepwise-e2-websocket-event-stream-with-filtering-and-replay-ext.md  (+70 more)
(+779 files in other folders)
