[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stepwise"]

[project]
name = "stepwise"
version = "0.1.0"
description = "Enter the flow state. Portable orchestration for agents and humans."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["httpx>=0.28.1"]

[project.scripts]
stepwise = "stepwise.cli:cli_main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
